<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="progress">Progress</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="type_habit_name">Type habit name</string>
    <string name="habit_name">habit name</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="sat">СБ</string>
    <string name="fri">ПТ</string>
    <string name="thur">ЧТ</string>
    <string name="wed">СР</string>
    <string name="tue">ВТ</string>
    <string name="mon">ПН</string>
    <string name="sun">ВС</string>
    <string name="todo">TODO</string>
    <string name="open_analytics">Открвть аналитику</string>
</resources>