<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.habit.HabitEditFragment">

    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/edit_text"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_name"
        android:layout_margin="36dp"
        android:textSize="16sp"
        android:hint="@string/type_habit_name"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="96dp"
        android:text="@string/delete"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginStart="96dp"
        android:text="@string/update"
        android:textSize="16sp"
        android:textColor="@color/white"/>

</FrameLayout>